# ZS24_PPR_Zappe

./: .gitignore  CMakeLists.txt  README.md
lib/drawing/: Drawing.cpp  Drawing.h  IRenderer.h  SVGRenderer.cpp  SVGRenderer.h
src/: arg_parser.cpp  arg_parser.h  bitonic_sort.cpp  bitonic_sort.h  computations.cpp  computations.h  dataloader.cpp  dataloader.h  main.cpp  merge_sort.cpp  merge_sort.h  statistics.cpp  statistics.h  utils.h
src/calculations/: computations.cpp  computations.h  merge_sort.cpp  merge_sort.h
src/calculations/cpu/: computations.cpp  computations.h  cpu_comps.cpp  cpu_comps.h  merge_sort.cpp
src/calculations/gpu/: gpu.cpp  gpu.h  gpu_comps.cpp  gpu_comps.h
src/dataloader/: dataloader.cpp  dataloader.h
src/my_drawing/: svg_generator.cpp  svg_generator.h
src/utils/: arg_parser.cpp  arg_parser.h  utils.h
